--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -13,11 +14,11 @@
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.7",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.5.4"
   }
 }
