--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.4",
+    "@dicebear/avatars": "^4.10.2",
     "@heroicons/react": "^1.0.6",
+    "graphql": "^16.5.0",
     "next": "latest",
     "next-auth": "^4.3.4",
     "react": "^17.0.2",
